--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2020.6.20
 chardet==3.0.4
 cloudpickle==1.3.0
 cycler==0.10.0
+dnspython==1.16.0
 future==0.18.2
 gast==0.3.3
 google-auth==1.18.0
@@ -33,6 +34,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pyglet==1.5.0
+pymongo==3.10.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
