--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 absl-py==0.9.0
+aniso8601==8.0.0
 astor==0.8.1
 astunparse==1.6.3
 autopep8==1.5.3
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
+click==7.1.2
 cloudpickle==1.3.0
 cycler==0.10.0
 dnspython==1.16.0
+Flask==1.1.2
+Flask-RESTful==0.3.8
 future==0.18.2
 gast==0.3.3
 google-auth==1.18.0
@@ -18,11 +22,14 @@ gym==0.17.2
 h5py==2.10.0
 idna==2.10
 importlib-metadata==1.7.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
 joblib==0.16.0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
 Markdown==3.2.2
+MarkupSafe==1.1.1
 matplotlib==3.2.2
 numpy==1.16.6
 oauthlib==3.1.0
@@ -42,11 +49,11 @@ requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
 scipy==1.4.1
+seaborn==0.10.1
 six==1.15.0
 stable-baselines==2.10.0
 tensorboard==1.14.0
 tensorboard-plugin-wit==1.7.0
-tensorflow==1.14.0
 tensorflow-estimator==1.14.0
 termcolor==1.1.0
 toml==0.10.1
