--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==0.9.0
 aniso8601==8.0.0
 astor==0.8.1
 astunparse==1.6.3
+attrs==19.3.0
 autopep8==1.5.3
 cachetools==4.1.1
 certifi==2020.6.20
@@ -12,6 +13,7 @@ cycler==0.10.0
 dnspython==1.16.0
 Flask==1.1.2
 Flask-RESTful==0.3.8
+flask-restplus==0.13.0
 future==0.18.2
 gast==0.3.3
 google-auth==1.18.0
@@ -25,17 +27,19 @@ importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.16.0
+jsonschema==3.2.0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
 Markdown==3.2.2
 MarkupSafe==1.1.1
 matplotlib==3.2.2
-numpy==1.16.6
+numpy==1.19.0
 oauthlib==3.1.0
 opencv-python==4.2.0.34
 opt-einsum==3.2.1
 pandas==1.0.5
+pprintpp==0.4.0
 protobuf==3.12.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -43,6 +47,7 @@ pycodestyle==2.6.0
 pyglet==1.5.0
 pymongo==3.10.1
 pyparsing==2.4.7
+pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.24.0
@@ -58,6 +63,6 @@ tensorflow-estimator==1.14.0
 termcolor==1.1.0
 toml==0.10.1
 urllib3==1.25.9
-Werkzeug==1.0.1
+Werkzeug==0.16.1
 wrapt==1.12.1
 zipp==3.1.0
