--- a/requirements.txt
+++ b/requirements.txt
@@ -57,9 +57,10 @@ scipy==1.4.1
 seaborn==0.10.1
 six==1.15.0
 stable-baselines==2.10.0
-tensorboard==1.14.0
+tensorboard==2.2.2
 tensorboard-plugin-wit==1.7.0
-tensorflow-estimator==1.14.0
+tensorflow==2.2.0
+tensorflow-estimator==2.2.0
 termcolor==1.1.0
 toml==0.10.1
 urllib3==1.25.9
