--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ opencv-python==4.2.0.34
 opt-einsum==3.2.1
 pandas==1.0.5
 pprintpp==0.4.0
+progressbar==2.5
 protobuf==3.12.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
